--- a/.github/workflows/zscan.yml
+++ b/.github/workflows/zscan.yml
@@ -45,14 +45,14 @@ jobs:
       uses: zimperium/zscanmarketplace@bfc6670f6648d796098c251ccefcfdb98983174d
       timeout-minutes: 60
       with:
-        # REPLACE: Zimperium Client Environment Name
-        client_env: env_string
+       # REPLACE: Zimperium Client Environment Name
+        client_env: mapsfreemium
         # REPLACE: Zimperium Client ID
-        client_id: id_string
+        client_id: KTz4Tf5aT0CZpfbn-yrILQ
         # REPLACE: Zimperium Client Secret
         client_secret: ${{ secrets.ZSCAN_CLIENT_SECRET }}
         # REPLACE: The path to an .ipa or .apk
-        app_file: app-release-unsigned.apk
+        app_file: ./Sample_Insecure_Bank_App.apk
 
     - name: Upload SARIF file
       uses: github/codeql-action/upload-sarif@v2
